[metadata]
name = bsvlib
author = aaron67
author_email = aaron67@aaron67.cc
description = Bitcoin SV (BSV) Python Library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gitzhou/bsvlib
project_urls =
    Bug Tracker = https://github.com/gitzhou/bsvlib/issues

classifiers =
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

keywords =
    bsv
    bitcoin-sv
    bitcoin sv
    bitcoinsv
    cryptocurrency
    payments
    tools
    wallet

[options]
python_requires = >=3.7
install_requires =
    requests
    typing-extensions
    pycryptodomex
tests_require =
    pytest
    ecdsa
